--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>unb.cic</groupId>
     <artifactId>pistarGODA-MDP</artifactId>
-    <version>0.1.0</version>
+    <version>1.0.0</version>
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
@@ -89,7 +89,7 @@
                     <flags>-Xmx1G</flags>
 
                     <!-- (optional) input file name: only this specific file will be made executable -->
-                    <inputFile>target/pistarGODA-MDP-0.1.0.jar</inputFile>
+                    <inputFile>target/pistarGODA-MDP-1.0.0.jar</inputFile>
 
                     <!-- (optional) classifier name: only artifacts with this classifier are made executable -->
                     <classifier>shaded</classifier>
@@ -99,7 +99,7 @@
 
                     <!-- (optional) name for a new binary executable, if not set will just
                          make the original artifact executable -->
-                    <programFile>nifty-executable</programFile>
+                    <programFile>goda</programFile>
 
                     <!-- (optional) name for a file that will define what script gets
                          embedded into the executable jar.  This can be used to
