--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,11 +27,11 @@ jobs:
         java-version: '22'
         distribution: 'temurin'
         cache: maven
-    - name: Build with Maven
-      run: mvn package
     - name: Generate executable
-      run: mvn really-executable-jar:really-executable-jar
-
-    # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
-    - name: Update dependency graph
-      uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
+    - run: mvn package
+    - run: mvn really-executable-jar:really-executable-jar
+    - run: mkdir staging && cp target/goda staging
+    - uses: actions/upload-artifact@v4
+      with:
+        name: Package
+        path: staging
