--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,9 +27,10 @@ jobs:
         java-version: '22'
         distribution: 'temurin'
         cache: maven
+    - name: Compile package
+      run: mvn package
     - name: Generate executable
-    - run: mvn package
-    - run: mvn really-executable-jar:really-executable-jar
+      run: mvn really-executable-jar:really-executable-jar
     - run: mkdir staging && cp target/goda staging
     - uses: actions/upload-artifact@v4
       with:
