--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -6,13 +6,14 @@
 # separate terms of service, privacy policy, and support
 # documentation.
 
-name: Java CI with Maven
+name: Main
 
 on:
   push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
+    branches:
+      - master
+    tags:
+      - "v*.*.*"
 
 jobs:
   build:
@@ -31,8 +32,8 @@ jobs:
       run: mvn package
     - name: Generate executable
       run: mvn really-executable-jar:really-executable-jar
-    - run: mkdir staging && cp target/goda staging
-    - uses: actions/upload-artifact@v4
+    - name: Release
+      uses: softprops/action-gh-release@v2
+      if: startsWith(github.ref, 'refs/tags/')
       with:
-        name: Package
-        path: staging
+        files: target/goda
